# openapiv3-to-typescript

./: Cargo.toml  README.md
src/: error.rs  generator.rs  lib.rs  oas.rs  partial.rs  reference.rs  schema.rs
src/generate/: any_of.rs  mod.rs  path.rs  properties.rs  schema.rs
src/generate/path/: mod.rs
src/generate/schema/: all_of.rs  any.rs  any_of.rs  mod.rs  not.rs  one_of.rs
src/generate/types/: array.rs  boolean.rs  integer.rs  mod.rs  number.rs  object.rs  string.rs
src/parser/: all_of.rs  any.rs  any_of.rs  mod.rs  not.rs  one_of.rs  schema.rs
src/parser/type/: array.rs  boolean.rs  integer.rs  mod.rs  number.rs  object.rs  string.rs
src/types/: array.rs  boolean.rs  mod.rs  number.rs  object.rs  string.rs
tests/: asana.rs  main.rs  xero_accounting.rs
tests/integration/: asana.rs  ebay_fulfillment.rs  helpers.rs  main.rs  xero_accounting.rs
