[package]
name = "openapiv3-to-typescript"
description = "Generate TypeScript from OpenAPIv3"
repository = "https://github.com/bosukas/openapiv3-to-typescript"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
openapiv3-extended = "6.0.0"
thiserror = "1"
itertools = "0.13.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde_yaml = "0.9"
indexmap = "2.2.6"